Revision history for ShardedKV: {{ $dist->version }}

{{$NEXT}}

0.19      2014-03-19 11:46:23UTC+0000 UTC

  - This module is *no longer* considered experimental. It's been used
    in production at Booking.com for a long time now without much
    issue.

  - Several minor bugfixes like "use"-ing a module that might be used
    for exceptions, fixing some exception logic.

  - Try to deal with Redis clients that have gone away for whatever
    reason (likely due to errors) by resetting the Redis connection on
    errors.

0.18      2013-05-28 17:35:01 Europe/Amsterdam

  - Auto-reconnect options for Redis storage backend.

0.17      2013-02-28 15:23:34 Europe/Amsterdam

  - Correctly capture exception messages so they proprogated
  - Add a new exception type DeleteFail (this was uncovered before)

0.16      2013-01-28 17:16:09 Europe/Amsterdam
  
  - Implement reset_connection($key) at the top level
  - Add tests for reset_connection() functionality
  - Fix some POD retardedness
  - Fix a bug in MySQL storage reset_connection

0.15      2013-01-22 12:42:24 Europe/Amsterdam

  - Ugh. Forgot the damn Throwable dep

0.14      2013-01-21 14:43:33 Europe/Amsterdam

  - API CHANGE FOR THE SHIPPED STORAGE BACKENDS
  - Add error classes and throw exceptions when needed
  - Add some additional documentation
  - Remove all references to "master" connections
    (we'll add that feature at a later date if needed

0.13      2012-06-21 15:42:42 Europe/Berlin

  - More documentation
  - Require Algorithm::ConsistentHash::Ketama 0.00008

0.12      2012-05-18 10:24:36 Europe/Berlin

  - MySQL storage order of initialization bug fix.
  - MySQL storage support for auto_increment PK
  - Ketama continuum: guard against bad specs
  - Introducing the HasLogger role, adding logging
    to various bits of code.

0.11      2012-05-11 11:20:36 Europe/Berlin

  - Minor MySQL storage fixup

0.10      2012-05-08 09:43:54 Europe/Berlin

  - MySQL storage: more documentation and minor